@@ -44,6 +44,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 476887  WARNING: unhandled amd64-freebsd syscall: 578
 477628  Add mremap support for Solaris
 477630  Include ucontext.h rather than sys/ucontext.h in Solaris sources
+477719  vgdb incorrectly replies to qRcmd packet
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
